[package]
name = "packetraven"
authors = ["Zach Burnett <zachary.r.burnett@gmail.com>"]
description = "Telemetry dashboard for APRS packets from TNC, https://aprs.fi, and PostGIS"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/UMDBPP/PacketRaven"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serial", "aprsfi", "sondehub"]
sondehub=[]
aprsfi=[]
serial=["dep:serialport"]
postgres = ["dep:postgres"]

[dependencies]
aprs-parser = "0.4.0"
chrono = { version = "0.4.24", features = ["clock"] }
clap = { version = "4.2.7", features = ["derive"] }
custom_error = "1.9.2"
env_logger = "0.10.0"
geo = { version = "0.24.1", features = ["proj"] }
geojson = "0.24.0"
lazy_static = "1.4.0"
log = "0.4.17"
postgres = {version="0.19.5", optional=true}
ratatui = "0.20.1"
crossterm = "*"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json", "blocking", "gzip"] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["chrono"] }
serde_yaml = "0.9.21"
serialport ={version= "4.2.0",optional=true}
url = "2.3.1"
