[tool.poetry]
name = 'packetraven'
version = '0.0.0'
description = 'Telemetry dashboard for APRS packets from TNC, https://aprs.fi, and PostGIS'
authors = ['Zach Burnett <zrb@umd.edu>']
license = 'GPL-3.0-or-later'
readme = 'README.md'
repository = 'https://github.com/UMDBPP/packetraven.git'
documentation = 'https://packetraven.readthedocs.io'

[build-system]
requires = [
    'cython',
    'poetry-core>=1.0.0',
    'poetry-dynamic-versioning',
]
build-backend = 'poetry.core.masonry.api'

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = '^3.7'
aprslib = '*'
backoff = '*'
humanize = '*'
numpy = '*'
pandas = '*'
pyserial = '*'
geojson = '*'
fastkml = '*'
matplotlib = '*'
pyproj = '*'
pyyaml = '*'
requests = '*'
shapely = '*'
sshtunnel = '*'
tablecrow = '>=1.4.3'
teek = '*'
typepigeon = '>=1.0.13'
typer = '*'
isort = { version = '*', optional = true }
oitnb = { version = '*', optional = true }
pytest = { version = '*', optional = true }
pytest-cov = { version = '*', optional = true }
pytest-mock = { version = '*', optional = true }
pytest-xdist = { version = '*', optional = true }
m2r2 = { version = '*', optional = true }
sphinx = { version = '*', optional = true }
sphinx-rtd-theme = { version = '*', optional = true }
sphinxcontrib-programoutput = { version = '*', optional = true }

[tool.poetry.extras]
testing = ['pytest', 'pytest-cov', 'pytest-mock', 'pytest-xdist']
development = ['isort', 'oitnb']
documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme', 'sphinxcontrib-programoutput']

[tool.poetry.scripts]
packetraven = 'packetraven.__main__:main'