[metadata]
name = packetraven
author = Zach Burnett, Quinn Kupec
author_email = zrb@umd.edu
description = Telemetry dashboard for APRS packets from TNC, https://aprs.fi, and PostGIS
long_description = file: README.md
license = MIT
url = https://github.com/UMDBPP/PacketRaven.git

[nosetests]
exe = True
tests = tests/
