[metadata]
name = packetraven
author = Zach Burnett, Quinn Kupec
author_email = zrb@umd.edu
description = Telemetry dashboard for APRS packets from TNC, https://aprs.fi, and PostGIS
long_description = file: README.md
license = MIT
url = https://packetraven.readthedocs.io

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
