[metadata]
name = packetraven
author = Zach Burnett <zrb@umd.edu>
description = Telemetry dashboard for APRS packets from TNC, https://aprs.fi, and PostGIS
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.7
url = https://packetraven.readthedocs.io

[options]
install_requires =
    aprslib
    humanize
    numpy
    pandas
    pyserial
    geojson
    fastkml
    matplotlib
    psycopg2-binary
    pyproj
    pyyaml
    requests
    shapely
    sshtunnel
    tablecrow>=1.4.3
    teek
    typepigeon
    typer

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    pytest-xdist
    pytz
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-programoutput

[options.entry_points]
console_scripts =
    packetraven=packetraven.__main__:main

